docker/flask-api/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - http:
      paths:
        - path: /app1/?(.*)
          backend:
            serviceName: flask-api1-services
            servicePort: 80
        - path: /app2/?(.*)
          backend:
            serviceName: flask-api2-services
            servicePort: 80
